# mf

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  data.rs  k8s.rs  k8s_test.rs  main.rs
src/app/: confirmation.rs  logs.rs  table.rs
