[package]
name = "mf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.53"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = "1.48.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
mini-redis = "0.4.1"
futures = "0.3.31"
color-eyre = "0.6.5"
itertools = "0.14.0"
unicode-width = "0.2.0"
fakeit = "1.4.0"
humantime = "2.3.0"
bytes = "1.11.0"
